fix spacing

--- a/revaluate_client/src/components/Header/Header.css
+++ b/revaluate_client/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 .headerBar{
-    width: 70vh;
+    width: 50vw;
     margin: 1rem 2rem;
-    text-align: left;    
+    text-align: left;
     display: flex;
     justify-content: space-between;
 }
@@ -13,12 +13,12 @@ a, a:hover{
     text-decoration: none;
     color: black;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
-    margin-right: 3rem;
+    /* margin-right: 3rem; */
 }
 .aboutLink, .insightsLink{
-    margin-left: 11rem;
+    /* margin-left: 11rem; */
     padding-top: 20px;
 }
 .revaluateLink, .revaluateLink:hover{
